# MoneyIn

./: .gitignore  README.md  main.py  package-lock.json  project_context.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: main.py
app/api/: deps.py
app/api/routers/: accounts.py  analytics.py  auth.py  categories.py  chat.py  members.py  setup.py  transactions.py  upload.py  views.py
app/core/: config.py  database.py  security.py
app/models/: domain.py
app/schemas/: ai_analysis.py
app/services/: ai_assistant.py  ai_service.py  crypto_service.py  file_service.py  forecasting_service.py  transaction_service.py
app/templates/: accounts.html  base.html  categories.html  dashboard.html  members.html  statement.html  upload.html
app/templates/partials/: accounts_container.html  category_grid.html  chat_message.html  dashboard_content.html  insights_cards.html  multi_review_carousel.html  password_prompt.html  review_table.html  single_file_card.html  statement_content.html  transaction_new_form.html  transaction_row.html  transaction_row_edit.html  transaction_table.html  transactions_table.html
data/extrato_itau/: Extrato Conta Corrente-160720262228.txt  Extrato Conta Corrente-160720262239.xls
figs/: main.md
notebooks/: analise_preditiva_sazonal.ipynb  analise_preditiva_sazonal_executed.ipynb  executed_output.ipynb  parsing.ipynb
